# serializer version: 1
# name: test_parse_devices
  dict({
    'air_temp': dict({
      'label': 'Air Temp',
      'state': '72',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
    'aux_1': dict({
      'is_on': False,
      'label': 'Water Feature',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_2': dict({
      'brightness': 0,
      'effect': None,
      'is_on': False,
      'label': 'Dimmable Light',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaDimmableLight',
    }),
    'aux_3': dict({
      'brightness': None,
      'effect': None,
      'is_on': False,
      'label': 'Aux Light',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaLightSwitch',
    }),
    'aux_B1': dict({
      'brightness': None,
      'effect': '0',
      'is_on': False,
      'label': 'Pool Light',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaColorLightIB',
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaBinarySensor',
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaSwitch',
    }),
    'pool_set_point': dict({
      'current_temperature': '78',
      'is_on': False,
      'label': 'Pool Set Point',
      'state': '80',
      'state_translated': None,
      'target_temperature': '80',
      'type': 'IaquaThermostat',
      'unit': <IaquaTemperatureUnit.FAHRENHEIT: 'F'>,
    }),
    'pool_temp': dict({
      'label': 'Pool Temp',
      'state': '78',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
    'spa_heater': dict({
      'is_on': True,
      'label': 'Spa Heater',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaSwitch',
    }),
    'spa_set_point': dict({
      'current_temperature': '102',
      'is_on': True,
      'label': 'Spa Set Point',
      'state': '104',
      'state_translated': None,
      'target_temperature': '104',
      'type': 'IaquaThermostat',
      'unit': <IaquaTemperatureUnit.FAHRENHEIT: 'F'>,
    }),
    'spa_temp': dict({
      'label': 'Spa Temp',
      'state': '102',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
  })
# ---
# name: test_parse_home
  dict({
    'air_temp': dict({
      'label': 'Air Temp',
      'state': '72',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaBinarySensor',
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaSwitch',
    }),
    'pool_set_point': dict({
      'current_temperature': '78',
      'is_on': False,
      'label': 'Pool Set Point',
      'state': '80',
      'state_translated': None,
      'target_temperature': '80',
      'type': 'IaquaThermostat',
      'unit': <IaquaTemperatureUnit.FAHRENHEIT: 'F'>,
    }),
    'pool_temp': dict({
      'label': 'Pool Temp',
      'state': '78',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
    'spa_heater': dict({
      'is_on': True,
      'label': 'Spa Heater',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaSwitch',
    }),
    'spa_set_point': dict({
      'current_temperature': '102',
      'is_on': True,
      'label': 'Spa Set Point',
      'state': '104',
      'state_translated': None,
      'target_temperature': '104',
      'type': 'IaquaThermostat',
      'unit': <IaquaTemperatureUnit.FAHRENHEIT: 'F'>,
    }),
    'spa_temp': dict({
      'label': 'Spa Temp',
      'state': '102',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
  })
# ---
# name: test_parse_onetouch
  dict({
    'onetouch_1': dict({
      'is_on': False,
      'label': 'Morning Scene',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
    }),
    'onetouch_2': dict({
      'is_on': False,
      'label': 'Evening Scene',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
    }),
  })
# ---
